recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: not found: value spirale
	avance(length);gauche(angle);spirale(steps-1,angle, length+increment,increment)
                                     ^